# dwmstatus

./: Cargo.toml  README.md  Xargo.toml
src/: battery.rs  cpu.rs  disk.rs  ifaddrs.rs  load.rs  main.rs  media.rs  mem.rs  prelude.rs  pulse.rs  temp.rs  vol.rs  wlaninfo.rs
